[package]
name = "DLLinjection-based_anti-screenshot_client"
version = "0.1.0"
edition = "2021"

[build-dependencies]
winres = "0.1"

[dependencies]
egui = "0.27"
eframe = "0.27"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Shutdown",
    "Win32_Graphics_Gdi",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
ico = "0.3"